--- a/consul/handlers/main.yaml
+++ b/consul/handlers/main.yaml
@@ -1,8 +1,7 @@
----
 
-- name: restart nginx
+- name: restart consul
   systemd:
     daemon_reload: yes
-    name: nginx
+    name: consul
     state: restarted
     enabled: yes
