--- a/go/handlers/main.yaml
+++ b/go/handlers/main.yaml
@@ -1,8 +1,7 @@
----
 
-- name: restart nginx
+- name: restart go
   systemd:
     daemon_reload: yes
-    name: nginx
+    name: go
     state: restarted
     enabled: yes
