--- a/go/tasks/main.yaml
+++ b/go/tasks/main.yaml
@@ -8,14 +8,14 @@
 - name: download GO
   become: true
   get_url:
-    url: https://dl.google.com/go/go1.11.1.linux-amd64.tar.gz
+    url: "{{ go_url }}"
     dest: /usr/local/
   when: not go_file_details.stat.exists
 
 - name: Unarchive GO
   become: true
   unarchive:
-    src: /usr/local/go1.11.1.linux-amd64.tar.gz
+    src: "/usr/local/{{ go_package_name }}"
     dest: /usr/local/
     remote_src: yes
   when: not go_file_details.stat.exists
@@ -23,7 +23,7 @@
 - name: delete go tar file
   become: true
   file:
-    dest: /usr/local/go1.11.1.linux-amd64.tar.gz
+    dest: "/usr/local/{{ go_package_name }}"
     state: absent
   when: not go_file_details.stat.exists
 
@@ -51,13 +51,31 @@
   # /home/vagrant/.bashrc
   when: not go_file_details.stat.exists
 
-- name: Start Go web
+- name: create folder
+  file:
+    path: "{{ site_location }}/files/templates/"
+    state: directory
+#
+# - name: copy web files
+#   copy:
+#     src: "/{{ destination }}/provisioners/roles/go/files"
+#     dest: "{{ site_location }}"
+
+- name: copy index.html template
   become: true
-  shell: "/usr/local/go/bin/go run /{{ destination }}/provisioners/roles/go/files/main.go &"
-  args:
-    executable: /bin/bash
-  when: start
-  tags:
-    - launch
-    # >/dev/null 2>&1
-#   # /vagrant/provisioners/roles/go/files/main.go
+  template:
+    src: "/{{ destination }}/provisioners/roles/go/templates/index.html.j2"
+    dest: "{{ site_location }}/files/templates/index.html"
+
+- name: copy main.go template
+  become: true
+  template:
+    src: "/{{ destination }}/provisioners/roles/go/templates/main.go.j2"
+    dest: "{{ site_location }}/files/main.go"
+
+- name: Render go Systemd Config
+  template:
+    src: "/{{ destination }}/provisioners/roles/go/templates/go.systemd.j2"
+    dest: /etc/systemd/system/go.service
+    mode: 0644
+  notify: restart go
