--- a/consul/tasks/main.yml
+++ b/consul/tasks/main.yml
@@ -2,15 +2,39 @@
 
 - name: check if consul already installed
   stat:
-    path: /usr/local/bin/consul
+    path: "{{ consul_bin_dir }}/consul"
   register: consul_file_details
+
+- name: Creating consul user group
+  group:
+    name: "{{ consul_group }}"
+  become: true
+
+- name: Create consul User
+  user:
+    name: "{{ consul_user }}"
+    groups: "{{ consul_group }}"
+    state: present
+    shell: /sbin/nologin
+    system: yes
+    createhome: false
+
+- name: create directorys for consul
+  file:
+    path: "{{ item }}"
+    state: directory
+    owner: "{{ consul_user }}"
+    group: "{{ consul_group }}"
+  with_items:
+    - "{{ consul_dir }}"
+    - "{{ consul_bin_dir }}"
+    - "{{ consul_config }}"
 
 - name: update apt cache
   become: true
   apt:
     update_cache: true
   when: not consul_file_details.stat.exists
-
 
 - name: Install dependencies
   become: true
@@ -26,52 +50,32 @@
   become: true
   get_url:
     url: "{{ consul_url }}"
-    dest: /usr/local/bin
+    dest: "{{ consul_bin_dir }}"
   when: not consul_file_details.stat.exists
 
 - name: Unarchive consul
   become: true
   unarchive:
-    src: "/usr/local/bin/{{ consul_package_name }}"
-    dest: /usr/local/bin
+    src: "{{ consul_bin_dir }}/{{ consul_package_name }}"
+    dest: "{{ consul_bin_dir }}/"
+    owner: "{{ consul_user }}"
+    group: "{{ consul_group }}"
     remote_src: true
   when: not consul_file_details.stat.exists
 
 - name: delete consul zip file
   become: true
   file:
-    dest: "/usr/local/bin/{{ consul_package_name }}"
+    dest: "{{ consul_bin_dir }}/{{ consul_package_name }}"
     state: absent
   when: not consul_file_details.stat.exists
-
-# - name: Verify consul installation
-#   shell: "consul --version"
-#   register: consul_version
-#
-# - name: check consul
-#   assert:
-#     that:
-#       - "'Consul' in consul_version.stdout"
-
-- name: Create Consul data directory
-  file:
-    path: /tmp/consul
-    state: directory
-    # owner: vagrant
-    # group: vagrant
-    mode: "u=rwX,g=rwX,o=rwX"
-
-- name: create directory for consul config files
-  file:
-    path: /tmp/consul.d/
-    state: directory
-    # mode: 0755
-    mode: "u=rwX,g=rwX,o=rwX"
 
 - name: move consul config template
   template:
     src: "/{{ destination }}/provisioners/roles/consul/templates/config.json.j2"
-    dest: /tmp/consul.d/config.json
+    dest: "{{ consul_config }}/config.json"
+    owner: "{{ consul_user }}"
+    group: "{{ consul_group }}"
   tags:
     - launch
 
@@ -81,6 +85,8 @@
     dest: /etc/systemd/system/consul.service
     mode: 0644
   notify: restart consul
+  tags:
+    - launch
 
-- name: flush handlers
-  meta: flush_handlers
+# - name: flush handlers
+#   meta: flush_handlers
