--- a/wordpress/tasks/main.yaml
+++ b/wordpress/tasks/main.yaml
@@ -24,17 +24,37 @@
   apt:
     update_cache: yes
 
-- name: Install Wordpress requisites
+- name: Install Wordpress PHP requisites
   apt:
     pkg:
       - php
       - php-mysql
+      - php-common
+      - php-tidy
+      - php-xml
+      - php-xmlrpc
+      - php-mbstring
+      - php-memcached
+      - php-curl
+      - php-zip
+      - php-gd
+      - php-bcmath
+      - php-imagick
+    update_cache: yes
+    state: present
+
+- name: Install Wordpress Apache requisites
+  apt:
+    pkg:
       - apache2
     update_cache: yes
     state: present
 
 - name: Create Wordpress home
-  command: "mkdir -p {{ apache_dir }}"
+  file:
+    path: "{{ apache_dir }}"
+    state: directory
+    state: present
 
 - name: Download Wordpress
   get_url:
@@ -55,48 +75,47 @@
     state: absent
 
 # check if ownership is apache
-- name: Ownership of Wordpress directory
+- name: Ownership/Permissions of Wordpress content directory
   file:
     path: "{{ apache_dir }}/wp-content"
     state: directory
     recurse: yes
-    owner: apache
-    group: apache
+    owner: www-data
+    group: www-data
     mode: '0755'
 
 - name: Wordpress Server config directory
-  shell: "sudo sed -i -e 's/^DocumentRoot.*$/DocumentRoot "\/var\/www\/wordpress"/' /etc/apache2/sites-enabled/000-default.conf"
-  # "sudo sed -i -e '/^DocumentRoot/s/$/ \\/var\\/www\\/wordpress/' /etc/apache2/sites-enabled/000-default.conf"
-  #remember to rename the rest of the tasks with new wordpress directory
+  shell: "sudo sed -i -e 's/^DocumentRoot.*$/DocumentRoot \"\\/var\\/www\\/wordpress\"/' /etc/apache2/sites-enabled/000-default.conf"
 
-#"sudo sed -i -e '/^ExecStart=/s/$/ -H tcp:\\/\\/0.0.0.0:4243/' /lib/systemd/system/docker.service"
+- name: Enable override for S3 bucket images
+  shell: "sed -i -e "/^<Directory \\/var\\/www\\/>.*/{n;n;s/None.*$/All/;}" /etc/apache2/apache2.conf"
 
-
-# check how to store db_credvars
-# remember to retrieve token, specify url, upload secret to path secret/wp/db
-# role to create vault server
-- name: Capture Vault Dict
-  set_fact:
-    db_cred: "{{ lookup('hashi_vault', 'secret=secret/wp/db token={{ vault_token }} url={{ vault_url }}') }}"
-
-# pass db_host from terraform
-- name: Render htaccess file
-  become: true
-  template:
-    src: "/{{ destination }}/provisioners/roles/wordpress/templates/htaccess.j2"
-    dest: "{{ apache_dir }}/.htaccess"
-
-# need to make sure dict db_cred is referenced in template
 - name: Render wp-config file
   become: true
   template:
     src: "/{{ destination }}/provisioners/roles/wordpress/templates/wp-config.php.j2"
     dest: "{{ apache_dir }}/wp-config.php"
-  with_dict:
-    - "{{ db_cred }}"
 
-- name: Create Healthy File
-  command: "echo 'healthy' > {{ apache_dir }}/healthy.html"
+- name: get wordpress file from S3 bucket
+  aws_s3:
+    bucket: "{{ s3_bucket_backup }}"
+    object: "/{{ www_prefix }}/{{ backup_file }}"
+    dest: "/{{ dest_dir }}/{{ backup_file }}"
+    mode: get
+  become: true
+  when: import_www == 'true'
+
+- name: unarchive wordpress files to /var/www/wordpress
+  unarchive:
+    src: "/{{ dest_dir }}/{{ backup_file }}"
+    dest: "{{ apache_dir }}"
+  when: import_www == 'true'
+
+- name: Render htaccess file
+  become: true
+  template:
+    src: "/{{ destination }}/provisioners/roles/wordpress/templates/.htaccess.j2"
+    dest: "{{ apache_dir }}/.htaccess"
 
 - name: Enable apache
   service:
