--- a/consul/molecule/default/molecule.yml
+++ b/consul/molecule/default/molecule.yml
@@ -1,31 +1,41 @@
 ---
+  
 dependency:
   name: galaxy
 driver:
-  name: vagrant
-  provider:
-    name: virtualbox
+  name: docker
 lint:
   name: yamllint
 platforms:
-  - name: vagrant
-    box: ubuntu/xenial64
+  - name: instance
+    image: "geerlingguy/docker-ubuntu1804-ansible:latest"
+    command: ""
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
 provisioner:
   name: ansible
-  inventory:
-    host_vars:
-      vagrant:
-        ansible_connection: local
-        ansible_user: vagrant
-  playbooks:
-    create: create.yml
+  log: True
   lint:
     name: ansible-lint
-scenario:
-  name: default
 verifier:
   name: testinfra
   lint:
     name: flake8
-  options:
-    v: 1
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    # - dependency
+    - cleanup
+    - destroy
+    - syntax
+    - create
+    # - prepare
+    - converge
+    - idempotence
+    # - side_effect
+    - verify
+    - cleanup
+    - destroy
