--- a/vault/tasks/main.yaml
+++ b/vault/tasks/main.yaml
@@ -28,6 +28,11 @@
 - name: set flag
   command: "setcap cap_ipc_lock=+ep {{ vault_dir }}/vault"
 
+- name: Creating vault user group
+  group:
+    name: vault
+  become: true
+
 - name: Create Vault User
   user:
     name: vault
@@ -35,17 +40,25 @@
     state: present
     shell: /sbin/nologin
     system: yes
-    createhome: true
-    home: "{{ vault_data }}"
+    createhome: false
 
-- name: Ownership of Vault directory
+- name: Ownership, Permissions of Vault directory
   file:
-    path: "{{ vault_data }}"
+    path: "{{ vault_dir }}"
     state: directory
     recurse: yes
     owner: vault
     group: vault
     mode: '0750'
+
+- name: Add Vault Env Variable
+  lineinfile:
+    path: "{{ vault_home }}/.bashrc"
+    line: "export VAULT_ADDR='{{ vault_addr }}'"
+    create: true
+
+- name: source the bashrc file
+  shell: ". {{ vault_home }}/.bashrc"
 
 - name: Copy vault hcl file
   become: true
@@ -58,38 +71,10 @@
 
 - name: Render vault Systemd Config
   template:
-    src: "/{{ destination }}/provisioners/roles/vault/templates/nginx.systemd.j2"
+    src: "/{{ destination }}/provisioners/roles/vault/templates/vault.systemd.j2"
     dest: /etc/systemd/system/vault.service
-    mode: 0644
   notify: restart vault
 
-- pause:
-    seconds: 20
-
-- name: Initialize the vault
-  command: vault operator init -key-shares=3 -key-threshold=2 -format json
-  register: vault_init_output
-  environment:
-    VAULT_ADDR: "{{ vault_addr }}"
-
-- debug:
-  msg: "{{ vault_init_output }}"
-
-- name: Parse output of vault init
-  set_fact:
-    vault_init_parsed: "{{ vault_init_output.stdout | from_json }}"
-
-- name: Write unseal keys to files
-  copy:
-    content:
-    dest:
-  delegate_to: localhost
-
-- name: Write root token to file
-  copy:
-    content:
-    dest:
-  delegate_to: localhost
 
 #######https://medium.com/@mitesh_shamra/setup-hashicorp-vault-using-ansible-fa8073a70a56
 #######https://www.digitalocean.com/community/tutorials/how-to-securely-manage-secrets-with-hashicorp-vault-on-ubuntu-16-04
