update web migrate role

--- a/web_db_migrate/tasks/main.yml
+++ b/web_db_migrate/tasks/main.yml
@@ -16,7 +16,15 @@
 # user accounts are not imported. Maybe create a new admin user
 # consider changing buckets to private read
 
-# harden linux server 
+# harden linux server
+
+# CANCEL Elementor Pro
+
+# test project pages in pad and mobile modes
+
+# search for ???? in pages and fix
+
+# check alternate grey white sections, to see if uniform 
 
 ####################################################
 ####################################################
