--- a/wordpress/tasks/main.yaml
+++ b/wordpress/tasks/main.yaml
@@ -1,35 +1,34 @@
 ---
 
-- name: Set the correct opcache filename (Ubuntu/Debian).
-  set_fact:
-    php_opcache_conf_filename: "10-opcache.ini"
-
 - name: Add repository for PHP .
   apt_repository:
     repo: 'ppa:ondrej/php'
 
 - name: Install Wordpress requisites
   apt:
-    pkg:
-      - php7.3
-      - php7.3-mysql
-      - php7.3-common
-      - php7.3-tidy
-      - php7.3-xml
-      - php7.3-xmlrpc
-      - php7.3-mbstring
-      - php7.3-memcached
-      - php7.3-soap
-      - php7.3-curl
-      - php7.3-zip
-      - php7.3-gd
-      - php7.3-bcmath
-      - php7.3-imagick
-      - php7.3-intl
-      - mysql-server
-      - python3-pymysql
-    update_cache: yes
+    name: "{{ item }}"
+    # update_cache: yes
     state: present
+  with_items:
+    - php7.3
+    - php7.3-mysql
+    - php7.3-common
+    - php7.3-tidy
+    - php7.3-xml
+    - php7.3-xmlrpc
+    - php7.3-mbstring
+    - php7.3-memcached
+    - php7.3-soap
+    - php7.3-curl
+    - php7.3-zip
+    - php7.3-gd
+    - php7.3-bcmath
+    - php7.3-imagick
+    - php7.3-intl
+    - mysql-client-core-5.7
+    # - mysql-server
+    # - python3-pymysql
+
 
 - name: Install Wordpress Apache requisites
   apt:
@@ -47,21 +46,21 @@
   get_url:
     url: "{{ wordpress_url }}"
     dest: "/tmp/{{ wordpress_file }}"
-  when: not import_www
+  when: not import_www | bool
 
 - name: Unarchive Wordpress
   become: true
   unarchive:
     src: "/tmp/{{ wordpress_file }}"
     dest: "{{ www_dir }}"
-  when: not import_www
+  when: not import_www | bool
 
 - name: Delete Wordpress file
   become: true
   file:
     dest: "/tmp/{{ wordpress_file }}"
     state: absent
-  when: not import_www
+  when: not import_www | bool
 
 - name: Wordpress Server config directory - apache2.conf
   shell: 'sudo sed -i -e "s/^<Directory \\/var\\/www.*$/<Directory \\/var\\/www\\/wordpress\\/>/" /etc/apache2/apache2.conf'
@@ -113,6 +112,13 @@
 - name: Ensure files are 0644
   command: find {{ www_dir }} -type f -exec chmod -c 0644 {} \;
 
+- name: Render htaccess file for rewrites
+  become: true
+  template:
+    src: "/{{ destination }}/provisioners/roles/wordpress/templates/.htaccess.j2"
+    dest: "{{ apache_dir }}/.htaccess"
+  notify: restart apache2
+
 # check if ownership is apache
 - name: Ownership of Wordpress content files
   file:
@@ -121,13 +127,6 @@
     recurse: yes
     owner: www-data
     group: www-data
-  notify: restart apache2
-
-- name: Render htaccess file for rewrites
-  become: true
-  template:
-    src: "/{{ destination }}/provisioners/roles/wordpress/templates/.htaccess.j2"
-    dest: "{{ apache_dir }}/.htaccess"
   notify: restart apache2
 
 - name: Enable the Rewrite Module
